<resources>
    <string name="app_name">Кореша</string>
    <string name="welcome_words">
    """Вас приветствует програмка для создания списка друзей

    Со мной вы можете:
    - Добавить друга
    - Удалить друга
    - Рассказать интересный анекдот

    Я никого не создаю и никого не убиваю (хотя иногда очень хочется ^^)"""</string>
    <string name="menu_searcher">Поиск</string>
    <string name="menu_adder">Добавить нового друга</string>
    <string name="menu_shower">Показать список друзей</string>
    <string name="menu_joke_listener">Рассказать анекдот</string>
    <string name="name">Введите имя</string>
    <string name="surname">Введите фамилию</string>
    <string name="phone_number">Введите номер телефона</string>
    <string name="buttom_adder">Сохранить</string>
    <string name="successfully">Новый друг успешно добавлен</string>
</resources>